tests/snapshots/examples_basics/mini_database.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/mini_database.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:29:1
   |
29 | print(first_record["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/mini_database.flx:29:1
   |
29 | print(first_record["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:30:1
   |
30 | print(first_record["age"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:33:1
   |
33 | print(second_record["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:34:1
   |
34 | print(second_record["age"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:37:1
   |
37 | print(len(db));
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Unit with Bool.

  --> examples/basics/mini_database.flx:45:9
   |
45 |         if opt_eq(record["id"], id) {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
46 |             record;
   | ^^^^^^^^^^^^^^^^^^^
47 |         } else {
   | ^^^^^^^^^^^^^^^^
48 |             findById(rest(records), id);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
49 |         };
   | ^^^^^^^^^


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:54:1
   |
54 | print(found["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify indexable value (Array/List/Tuple/Map) with Unit.

  --> examples/basics/mini_database.flx:54:7
   |
54 | print(found["name"]);
   |       ^^^^^
   |       ----- expected indexable value (Array/List/Tuple/Map), found Unit
   |       ----- indexed value is known at compile time

Help:
  index only arrays, lists, tuples, or maps


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Unit with Bool.

  --> examples/basics/mini_database.flx:62:9
   |
62 |         if opt_eq(record["name"], name) {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
63 |             record;
   | ^^^^^^^^^^^^^^^^^^^
64 |         } else {
   | ^^^^^^^^^^^^^^^^
65 |             findByName(rest(records), name);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
66 |         };
   | ^^^^^^^^^


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/basics/mini_database.flx:70:15
   |
70 | let charlie = findByName(db, "Charlie");
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^
   |               ------------------------- expected Int, found String


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:71:1
   |
71 | if charlie == None {
   | ^^^^^^^^^^^^^^^^^^^^
72 |     print("Not found");
   | ^^^^^^^^^^^^^^^^^^^^^^^
73 | } else {
   | ^^^^^^^^
74 |     print(charlie["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
75 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/basics/mini_database.flx:77:14
   |
77 | let nobody = findByName(db, "Nobody");
   |              ^^^^^^^^^^^^^^^^^^^^^^^^
   |              ------------------------ expected Int, found String


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:78:1
   |
78 | if nobody == None {
   | ^^^^^^^^^^^^^^^^^^^
79 |     print("Not found");
   | ^^^^^^^^^^^^^^^^^^^^^^^
80 | } else {
   | ^^^^^^^^
81 |     print(nobody["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
82 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 14 errors.
== stdout ==
<not executed>
